# voice-rag-customer-service-bot

./: .env.example  .gitignore  README.es.md  README.md  pyproject.toml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
_bmad/: config.user.toml
_bmad-output/planning-artifacts/: PRD.md  architecture.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
app/: config.py  escalation.py  logging_utils.py  main.py
app/llm/: client.py  intent.py
app/pipeline/: sequential.py  streaming.py
app/rag/: ingest.py  retriever.py
app/rag/knowledge_base/: account_data.json  faqs.json
app/voice/: audio_utils.py  stt.py  tts.py  vad.py
docs/: sdd-compliance-audit.md
docs/latency/: report.md
frontend/: app.js  index.html  styles.css
scripts/: generate_test_audio.py  latency_report.py
specs/001-rag-base/: plan.md  spec.md  tasks.md
specs/002-stt-tts-sequential/: plan.md  spec.md  tasks.md
specs/003-streaming-e2e/: plan.md  spec.md  tasks.md
specs/004-fallback-escalation/: plan.md  spec.md  tasks.md
specs/005-docs-metrics/: plan.md  spec.md  tasks.md
specs/006-language-and-theme/: plan.md  spec.md  tasks.md
tests/: test_escalation.py  test_language.py  test_pipeline_sequential.py  test_pipeline_streaming.py  test_rag_qa.py
